# fmriprep-rodents

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  .versions.json  .zenodo.json  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile_devel  LICENSE  MANIFEST.in  Makefile  README.rst  env.yml  get_version.py  long_description.rst  requirements.txt  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml  ds005_fasttrack_outputs.txt  ds005_outputs.txt  ds005_partial_fasttrack_outputs.txt  ds005_partial_outputs.txt  ds054_fasttrack_outputs.txt  ds054_outputs.txt  ds210_fasttrack_outputs.txt  ds210_outputs.txt
.github/: auto-comment.yml  config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  questions.md
.github/workflows/: pythonpackage.yml
.maint/: contributors.json  developers.json  paper_author_list.py  update_zenodo.py
docker/files/: freesurfer-exclude.txt
docs/: api.rst  conf.py  contributors.rst  docker.rst  faq.rst  installation.rst  license.rst  links.rst  outputs.rst  pull_request_template.md  sdc.rst  singularity.rst  spaces.rst  usage.rst  workflows.rst
docs/_static/: sbatch.slurm
fmriprep/: __about__.py  _version.py  config.py
fmriprep/cli/: parser.py  version.py  workflow.py
fmriprep/data/tests/: config.toml
fmriprep/interfaces/: reports.py
fmriprep/patch/workflows/: anatomical.py
fmriprep/utils/: bids.py  sentry.py
fmriprep/workflows/bold/: __init__.py  base.py  outputs.py  resampling.py  t2s.py
fmriprep/workflows/bold/tests/: test_confounds.py
fmriprep_rodents/: __about__.py  _version.py  config.py
fmriprep_rodents/cli/: parser.py  run.py  workflow.py
fmriprep_rodents/data/: reports-spec.yml
fmriprep_rodents/data/tests/: config.toml
fmriprep_rodents/interfaces/: __init__.py  confounds.py  mc.py  multiecho.py  reports.py
fmriprep_rodents/patch/interfaces/: __init__.py
fmriprep_rodents/patch/reports/: __init__.py
fmriprep_rodents/patch/utils/: __init__.py
fmriprep_rodents/patch/workflows/: anatomical.py  func.py
fmriprep_rodents/tests/: test_config.py
fmriprep_rodents/utils/: bids.py  sentry.py
fmriprep_rodents/workflows/: base.py  tests.py
fmriprep_rodents/workflows/bold/: __init__.py  base.py  confounds.py  hmc.py  outputs.py  registration.py  resampling.py  stc.py
fmriprep_rodents/workflows/bold/tests/: test_confounds.py
fprodents/: __about__.py  __init__.py  __main__.py  _version.py  config.py
fprodents/cli/: run.py  version.py  workflow.py
fprodents/cli/tests/: test_parser.py  test_version.py
fprodents/data/: translation_rigid.json
fprodents/data/tests/: config.toml
fprodents/interfaces/: __init__.py  confounds.py  mc.py  multiecho.py  patches.py  reports.py
fprodents/patch/interfaces/: __init__.py
fprodents/patch/utils/: __init__.py
fprodents/patch/workflows/: anatomical.py  func.py
fprodents/tests/: test_config.py
fprodents/utils/: meepi.py  sentry.py  testing.py
fprodents/workflows/: base.py  tests.py
fprodents/workflows/bold/: base.py  confounds.py  hmc.py  outputs.py  registration.py  resampling.py  stc.py  t2s.py
fprodents/workflows/bold/tests/: test_confounds.py
scripts/: generate_reference_mask.py
wrapper/: fmriprep_docker.py
