[metadata]
author = The NiPreps Developers
author_email = nipreps@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = fMRIPrep-rodents is a robust and easy-to-use pipeline for preprocessing of rodent fMRI data.
license = Apache Software License
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    NiPreps=https://www.nipreps.org/
url = https://github.com/nipreps/fmriprep-rodents

[options]
python_requires = >=3.7
install_requires =
    nibabel >= 3.0
    nipype >= 1.7.1
    nitime
    nitransforms >= 21.0.0
    niworkflows >= 1.5.2
    nirodents >= 0.2.7
    numpy
    pandas
    pybids >= 0.12.1
    pyyaml
    requests
    scikit-image >= 0.19
    smriprep >= 0.11.1
    tedana >= 0.0.9a1, < 0.0.10
    templateflow ~= 0.7.1
    toml
test_requires =
    coverage
    codecov
    pytest
packages = find:
zip_safe = true

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 1.8
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-napoleon
docs =
    %(doc)s
duecredit = duecredit
resmon =
sentry = sentry-sdk >=0.6.9
tests =
    coverage
    codecov
    pytest
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(sentry)s
    %(tests)s

[options.package_data]
fprodents =
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/flirtsch/bbr.sch
    data/reports-spec.yml
    data/tests/config.toml
    data/tests/ds000005/*
    data/tests/ds000005/sub-01/anat/*
    data/tests/ds000005/sub-01/func/*
    VERSION

[options.entry_points]
console_scripts =
    fprodents=fprodents.cli.run:main

[versioneer]
VCS = git
style = pep440
versionfile_source = fprodents/_version.py
versionfile_build = fprodents/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
ignore =
    W503
    E231
    E203
exclude =
    *build/
    docs/sphinxext/
    docs/tools/
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -vsx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE NUMBER
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
    ignore:cmp not installed:UserWarning
    ignore:This has not been fully tested:UserWarning

[coverage:run]
concurrency = multiprocessing
